<resources>

    <!-- 主页 -->
    <string name="app_name">中科农信</string>
    <string name="return_home">返回主页</string>
    <string name="divider"></string>
    
    <!-- 通用 -->
    <string name="new_data_tip">有新数据可更新，立即更新数据吗？</string>
    
    <!-- 登录 -->
    <string name="please_login">请登录</string>
    <string name="please_register">请注册</string>
    
    <string name="conform_register">确认注册吗？</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    
    <string name="empty_username">用户名不能为空</string>
    <string name="empty_passwd">密码不能为空</string>
    
    <!-- 设置 -->
    <string name="setting">设置</string>
    <string name="timeout">下载超时(秒)</string>
    
    <!-- 我的自选 -->
    <string name="confirm_remove_my_product">确认删除自选产品？</string>
    
    <!-- 供求信息 -->
    <string name="supply">供应</string>
    <string name="demand">求购</string>
    
    <!-- 我的供求 -->
    <string name="create_supply_demand">发布新供求</string>
    <string name="create_supply_demand_help">发布供求需要注意的事项：\n1.请在供求说明中填写发布或者供应的简要说明；\n2.用户信息会自动填写</string>
    <string name="post">发布</string>
    <string name="confirm_post_supply_demand_info">确认发布供求信息吗？</string>

    <string name="post_supply_demand_info_ok">发布成功</string>
    <string name="post_supply_demand_info_failed">发布供求信息失败，请检查网络</string>
    
    <!-- 我的商圈 -->
    <string name="all">全部</string>
    <string name="rich_planter">种植大户</string>
    <string name="rich_culturists">养殖大户</string>
    <string name="middleman">经纪人</string>
    <string name="cooperation">合作社</string>
    
    <string name="name">姓名</string>
    <string name="major">专业</string>
    <string name="address">联系地址</string>
    <string name="telephone">联系电话</string>
    
    <string name="friend_info">商友信息</string>
    
    <string name="my_message">我的留言</string>
    <string name="friend_message">商友留言</string>
    <string name="group">商圈</string>
    
    <string name="new_message">新建留言</string>
    <string name="introduce">介绍：</string>
    
    <string name="friend_interphone">语音对讲</string>

    <string name="self_introduce">自我介绍：</string>
    <string name="please_set_self_introduce">请编辑自我介绍</string>
    <string name="set_self_introduce">设置</string>

    <string name="confirm_post_message">确认发布留言吗？</string>
    
    <!-- 精选课件 -->
    <string name="grade">分数</string>
    <string name="submit">交卷</string>
    <string name="reset">重做</string>
    <string name="confirm_submit_course">确认交卷吗？</string>
    <string name="confirm_reset_course">确认要重做吗？</string>
    <string name="key_anwser">anwser</string>
    <string name="key_anwser_grade">anwser_grade</string>

    <!-- Ais视图 -->
    <string name="audio">音频</string>
    <string name="video">视频</string>
    <string name="back">返回</string>
    <string name="start_play_audio">开始播放音频</string>
    <string name="stop_play_audio">停止播放音频</string>
    
    <!-- 专家指导 -->
    <string name="expert_anwser">专家解答</string>
    <string name="ask_expert">向专家提问</string>
    <string name="ask_expert_interphone">语音对讲</string>
    <string name="ask">提问</string>
    <string name="subject">主题</string>
    <string name="input_subject">请输入主题</string>
    <string name="input_question">请输入问题</string>
    <string name="confirm_ask_question">确认提问吗？</string>
    <string name="input_too_short">输入太短，不能少于5个汉字</string>

</resources>