<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
		<Button
		    android:id="@+id/my_group_message_my_message"
		    android:text="@string/my_message"
		    style="@style/TabBtn" />

		<Button
		    android:id="@+id/my_group_message_friend_message"
		    android:text="@string/friend_message"
		    style="@style/TabBtn" />

		<Button
		    android:id="@+id/my_group_message_group"
		    android:text="@string/group"
		    style="@style/TabBtn" />
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/my_group_message_content"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" >
		<!-- ADD IN CODE -->
	</LinearLayout>

</LinearLayout>