<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

	<LinearLayout android:id="@+id/my_group_my_message_listview"
		android:layout_width="fill_parent"
		android:layout_height="0sp"
		android:layout_alignParentTop="true"
		android:layout_above="@+id/my_group_my_message_introduce" />

    <RelativeLayout android:id="@+id/my_group_my_message_introduce"
    android:layout_width="match_parent"
    android:layout_height="72sp"
    android:layout_above="@+id/new_message_divider_bottom" >
		<TextView android:id="@+id/my_group_my_message_introduce_label"
		   android:layout_width="wrap_content"
		   android:layout_height="match_parent"
		   android:text="@string/self_introduce"
		   android:layout_alignParentLeft="true"
		   style="@style/TitleText"
		   android:padding="2sp" />

		<EditText android:id="@+id/my_group_my_message_introduce_edit"
		   android:layout_width="fill_parent"
		   android:layout_height="wrap_content"
		   android:layout_toLeftOf="@+id/my_group_my_message_introduce_set"
		   android:layout_toRightOf="@+id/my_group_my_message_introduce_label"
		   android:layout_marginTop="10dip"
		   android:hint="@string/please_set_self_introduce"
		   android:inputType="textMultiLine"
		   android:gravity="left|top"
		   android:minLines="4"/>
		
		<Button android:id="@+id/my_group_my_message_introduce_set"
		   android:layout_width="wrap_content"
		   android:layout_height="wrap_content"
		   android:text="@string/set_self_introduce"
		   android:layout_alignParentRight="true"
		   style="@style/PostBtn" />
	</RelativeLayout>
	
	<View android:id="@+id/new_message_divider_left"
	   android:layout_width="1dip"
	   android:layout_height="fill_parent"
	   android:background="@drawable/list_divider_vertical"
	   android:layout_alignParentLeft="true"
	   android:layout_above="@+id/new_message_divider_bottom" />
	
	<View android:id="@+id/new_message_divider_right"
	   android:layout_width="1dip"
	   android:layout_height="fill_parent"
	   android:background="@drawable/list_divider_vertical"
	   android:layout_alignParentRight="true"
	   android:layout_above="@+id/new_message_divider_bottom" />
	    
	<View android:id="@+id/new_message_divider_bottom"
	   android:layout_width="fill_parent"
	   android:layout_height="1dip"
	   android:background="@drawable/list_divider"
	   android:layout_alignParentBottom="true" />

</RelativeLayout>